--- a/FitnessApp/Base.lproj/Main.storyboard
+++ b/FitnessApp/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -142,7 +142,7 @@
                                 <color key="separatorColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExerciseCell" rowHeight="218" id="2GX-mG-xk5" customClass="ExerciseCell" customModule="FitnessApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="218"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="218"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2GX-mG-xk5" id="tET-0c-RY7">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="218"/>
@@ -215,7 +215,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rHB-fr-Dva" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5539.130434782609" y="199.55357142857142"/>
+            <point key="canvasLocation" x="3306" y="181"/>
         </scene>
         <!--Workout Details View Controller-->
         <scene sceneID="dq0-96-sTx">
@@ -231,7 +231,7 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TypeCellTableViewCell" rowHeight="342" id="Dvn-wp-Ydf" customClass="TypeCellTableViewCell" customModule="FitnessApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="342"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="342"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Dvn-wp-Ydf" id="s13-0H-KKK">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="342"/>
@@ -296,7 +296,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Dg-am-hPJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6592.753623188406" y="199.55357142857142"/>
+            <point key="canvasLocation" x="4286" y="181"/>
         </scene>
         <!--Exercise Details View Controller-->
         <scene sceneID="kfn-Kj-jOe">
@@ -337,23 +337,79 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mIJ-dA-fsF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7450.7246376811599" y="203.57142857142856"/>
+            <point key="canvasLocation" x="5361" y="181"/>
         </scene>
-        <!--View Controller-->
+        <!--Nutrition View Controller-->
         <scene sceneID="4yU-s2-955">
             <objects>
-                <viewController id="iZ5-ba-NR1" sceneMemberID="viewController">
+                <viewController id="iZ5-ba-NR1" customClass="NutritionViewController" customModule="FitnessApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YIj-FX-M5c">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image" translatesAutoresizingMaskIntoConstraints="NO" id="7xO-Va-kcT">
+                                <rect key="frame" x="-11" y="88" width="425" height="242"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Combat Gym Dreads and Reach your fitness Goals" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VF0-C0-0VI">
+                                <rect key="frame" x="20" y="270" width="374" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <color key="textColor" systemColor="secondarySystemGroupedBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zzz-7X-0C4">
+                                <rect key="frame" x="0.0" y="338" width="414" height="558"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="264" id="Amo-WO-S6M" customClass="NutritionCell" customModule="FitnessApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="264"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Amo-WO-S6M" id="ktq-nq-PeQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="264"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PZa-aC-99K">
+                                                    <rect key="frame" x="12" y="11" width="382" height="242"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="382" id="08V-ZN-HF5"/>
+                                                        <constraint firstAttribute="height" constant="149" id="2X3-g2-chd"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yvb-pz-MB1">
+                                                    <rect key="frame" x="20" y="11" width="363" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="PZa-aC-99K" secondAttribute="bottom" constant="11" id="gPx-8a-ZYI"/>
+                                                <constraint firstItem="PZa-aC-99K" firstAttribute="top" secondItem="ktq-nq-PeQ" secondAttribute="top" constant="11" id="lA3-DG-1gr"/>
+                                                <constraint firstItem="PZa-aC-99K" firstAttribute="leading" secondItem="ktq-nq-PeQ" secondAttribute="leading" constant="12" id="lSW-1X-90A"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="foodTypeImage" destination="PZa-aC-99K" id="xrw-4W-BBU"/>
+                                            <outlet property="foodTypeName" destination="yvb-pz-MB1" id="RTG-8y-C7Q"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="AJT-8A-miT"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="eP7-Xv-aFQ"/>
+                    <connections>
+                        <outlet property="NutritionTable" destination="Zzz-7X-0C4" id="3mW-6n-XmR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yzf-j6-Zi9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5540" y="954"/>
+            <point key="canvasLocation" x="3305.7971014492755" y="928.79464285714278"/>
         </scene>
         <!--FitBuddy-->
         <scene sceneID="Dfg-7R-S61">
@@ -508,7 +564,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hab-pZ-Fwn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5539.130434782609" y="-522.99107142857144"/>
+            <point key="canvasLocation" x="3306" y="-544"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="RK0-3c-0SQ">
@@ -527,7 +583,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xaz-2U-Pas" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2777" y="-220"/>
+            <point key="canvasLocation" x="965" y="93"/>
         </scene>
         <!--Home-->
         <scene sceneID="tIN-Sl-DbP">
@@ -549,7 +605,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j7T-pX-fx0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3683.0769230769229" y="-522.51184834123217"/>
+            <point key="canvasLocation" x="2212" y="-544"/>
         </scene>
         <!--Workouts-->
         <scene sceneID="iI5-mF-70U">
@@ -568,13 +624,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="klX-5A-nYh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3683" y="200"/>
+            <point key="canvasLocation" x="2259" y="181"/>
         </scene>
-        <!--Profile-->
+        <!--Nutrition-->
         <scene sceneID="UpB-1U-CZV">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="huB-kt-0hl" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" image="outline_manage_accounts_black_36pt" selectedImage="outline_manage_accounts_black_36pt" id="bdW-fd-KB2"/>
+                    <tabBarItem key="tabBarItem" title="Nutrition" image="pencil" catalog="system" selectedImage="pencil" id="bdW-fd-KB2"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="8qD-7r-vzL">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -587,15 +643,16 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g4l-WD-iHe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3683" y="954"/>
+            <point key="canvasLocation" x="2323" y="930"/>
         </scene>
     </scenes>
     <resources>
         <image name="38464" width="512" height="512"/>
+        <image name="image" width="569" height="380"/>
         <image name="minus" catalog="system" width="128" height="24"/>
         <image name="outline_fitness_center_black_36pt" width="36" height="36"/>
         <image name="outline_home_black_36pt" width="36" height="36"/>
-        <image name="outline_manage_accounts_black_36pt" width="36" height="36"/>
+        <image name="pencil" catalog="system" width="128" height="113"/>
         <image name="pexels-gdtography-950241" width="3996" height="2668"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
